package com.matusalenalves.library.entities;

public class Loan {
}
