package com.matusalenalves.library.entities;

public class User {
}
