package com.matusalenalves.library.entities.enums;

public enum LoanStatus {
}
