package com.matusalenalves.library.entities.enums;

public enum Role {
    ADMIN,
    CLIENT
}